--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="" type="" href="" />
     <link href="https://db.onlinewebfonts.com/c/73c00071d90ecfb78bf0ccdeda529307?family=Nico+Moji" rel="stylesheet">
 
 
